fix: 补充缺失的 SecondMe OAuth 环境变量

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ LLM_MODEL="gpt-4o-mini"
 
 # SecondMe OAuth
 SECONDME_API_BASE_URL="https://your-secondme-instance.com"
+SECONDME_OAUTH_URL="https://your-secondme-instance.com/oauth/authorize"
+SECONDME_TOKEN_ENDPOINT="https://your-secondme-instance.com/oauth/token"
 SECONDME_CLIENT_ID="your-client-id"
 SECONDME_CLIENT_SECRET="your-client-secret"
 SECONDME_REDIRECT_URI="http://localhost:3000/api/auth/callback"
